# mpihm

./: CMakeLists.txt  README.md  compute.c  compute.h  global.c  global.h  input.c  input.h  main.c  mpi_helper.c  mpi_helper.h  output.c  output.h  run.sh
